migrate linux x64 project to JDK 21